--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 html {
     font-size: 16px;
 }
@@ -19,12 +24,18 @@ body {
 }
 
 body #root {
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
     padding: 1rem;
 }
 
 body ::selection {
     background-color: rgba(255, 255, 0, 0.5);
+}
+
+main {
+    flex-grow: 1;
 }
 
 .flex {
