--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    background-attachment: scroll;
+    background-attachment: fixed;
 }
 
 body #root {
@@ -81,10 +81,20 @@ button {
 }
 
 input,
-button {
+button,
+select {
     font-family: inherit;
     font-size: inherit;
     height: 2rem;
     border-radius: 1rem;
     text-align: center;
+}
+
+select {
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+select:focus {
+    outline: 1px solid black;
 }
