--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ body ::selection {
 
 main {
     flex-grow: 1;
+    margin: 1rem 0;
 }
 
 .flex {
@@ -60,8 +61,9 @@ button:hover {
     transform: scale(1.2);
 }
 
-a:active {
-    transform: scale(0.5);
+a:active,
+button:active {
+    transform: scale(1);
 }
 
 input {
@@ -76,8 +78,9 @@ input:focus {
 }
 
 button {
+    cursor: pointer;
     border: 2px solid black;
-    transition: transform 0.5s;
+    transition: all 0.5s;
 }
 
 input,
