Add validation for total count in OrderSection component

--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,12 @@ select {
 select:focus {
     outline: 1px solid black;
 }
+
+.invalid-field {
+    border: 2px red solid;
+    color: red;
+}
+
+.invalid-text {
+    color: red;
+}
