--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ button,
 select {
     font-family: inherit;
     font-size: inherit;
-    height: 2rem;
+    min-height: 2rem;
     border-radius: 1rem;
     text-align: center;
 }
