--- a/src/assets/styles/OrderSection.css
+++ b/src/assets/styles/OrderSection.css
@@ -3,6 +3,7 @@
     padding: 1rem;
     border: 2px gray dashed;
     width: 25%;
+    user-select: none;
 }
 
 .order-section div {
@@ -54,20 +55,6 @@
     margin: 50px 0 0;
     clear: both;
     float: right;
-}
-
-.order-section .add-button:enabled:hover {
-    background-color: rgb(195, 195, 195);
-    transform: none;
-}
-
-.order-section .add-button:disabled:hover {
-    transform: none;
-    cursor: not-allowed;
-}
-
-.order-section .add-button:enabled:active {
-    box-shadow: inset 0 0 5px 1px black;
 }
 
 .order-section .btn-plus,
