--- a/src/assets/styles/BookSection.css
+++ b/src/assets/styles/BookSection.css
@@ -8,10 +8,11 @@
 
 .book-section .book-image {
     transition: all 1s ease-in-out;
+    width: 16rem;
 }
 
 .book-section .book-image:hover {
-    transform: perspective(100px) translate3d(50px, 20px, 50px);
+    transform: perspective(100px) translate3d(100px, -40px, 40px);
 }
 
 .book-section .book-info {
@@ -31,4 +32,63 @@
 
 .book-section .book-span {
     font-weight: bold;
+}
+
+@media screen and (max-width: 1200px) {
+
+    .book-section {
+        width: 70%;
+    }
+
+}
+
+@media screen and (max-width: 1024px) {
+
+    .book-section {
+        width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 800px) {
+
+    .book-section .book-info {
+        width: 100%;
+        margin: 1rem 0;
+    }
+
+    .book-section .book-description {
+        width: 100%;
+        margin: 1rem 0;
+    }
+
+    .book-section div.flex {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .book-section .img-container {
+        width: 70%;
+    }
+
+    .book-section .book-image {
+        width: 100%;
+    }
+
+    .book-section .book-image:hover {
+        transform: perspective(100px) translate3d(0, 0, 30px);
+    }
+
+}
+
+@media screen and (max-width: 420px) {
+
+    .book-section .img-container {
+        width: 100%;
+    }
+
+    .book-section .book-image:hover {
+        transform: perspective(100px) translate3d(0, 0, 10px);
+    }
+
 }
