--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -4,30 +4,38 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    margin: 0 0 1rem;
 }
 
 .header h1 {
-    margin: 0.5rem 0;
+    margin: 1rem 0;
     user-select: none;
 }
 
 .header nav {
-    width: 25rem;
-    justify-content: space-around;
     align-items: center;
+    padding: 1rem;
+}
+
+.header nav>* {
+    margin-right: 1.5rem;
+}
+
+.header nav :last-child {
+    margin-right: 0;
 }
 
 .header .cart-link {
     position: relative;
+    width: 3.2rem;
 }
 
 .header .cart-link span{
     display: block;
     position: absolute;
     bottom: 0;
-    right: -0.8rem;
+    right: -0.5rem;
     background-color: rgb(240, 240, 10);
+    border: 1px solid black;
     border-radius: 1rem;
     padding: 0.1rem;
 }
@@ -40,4 +48,35 @@
     padding-left: 0.5rem;
 }
 
-/* Header */
+.header .user-avatar {
+    width: 3.2rem;
+}
+
+@media screen and (max-width: 800px) {
+
+    .header {
+        flex-direction: column;
+    }
+
+}
+
+@media screen and (max-width: 420px) {
+
+    .header h1 {
+        text-align: center;
+    }
+
+    .header nav {
+        flex-direction: column;
+    }
+
+    .header nav>* {
+        margin-right: 0;
+        margin-bottom: 1.5rem;
+    }
+    
+    .header nav :last-child {
+        margin-bottom: 0;
+    }
+
+}
