--- a/src/assets/styles/NotFound.css
+++ b/src/assets/styles/NotFound.css
@@ -1,9 +1,11 @@
 .error-info-container {
     font-size: 4rem;
+    padding: 1rem;
 }
 
 .error-info-container p {
     text-align: center;
+    margin: 1rem 0;
 }
 
 .error-info-container span {
@@ -14,9 +16,39 @@
 .error-info-container a {
     display: block;
     width: 50%;
-    margin: auto;
+    margin: 1rem auto;
     text-align: center;
     font-size: 2rem;
     text-decoration: underline;
     color: purple;
+}
+
+@media screen and (max-width: 1024px) {
+    .error-info-container {
+        font-size: 3rem;
+    }
+
+    .error-info-container a {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .error-info-container {
+        font-size: 1.5rem;
+    }
+
+    .error-info-container a {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .error-info-container {
+        font-size: 1rem;
+    }
+
+    .error-info-container a {
+        font-size: 0.8rem;
+    }
 }
