--- a/src/assets/styles/SpecificBook.css
+++ b/src/assets/styles/SpecificBook.css
@@ -2,3 +2,12 @@
     justify-content: space-between;
     align-items: flex-start;
 }
+
+@media screen and (max-width: 1024px) {
+
+    .specific-book-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
