--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,20 @@ a:active,
     box-shadow: inset 0 0 5px 1px black;
 }
 
+.btn-styled-3 {
+    color: red;
+    border: none;
+    background: none;
+    padding: 0;
+    min-height: 1rem;
+    border-radius: 0;
+    user-select: none;
+}
+
+.btn-styled-3:hover {
+    transform: perspective(100px) translate3d(0, 0, 30px);
+}
+
 input,
 button,
 select {
