--- a/src/components/BookCard/BookCard.css
+++ b/src/components/BookCard/BookCard.css
@@ -13,9 +13,7 @@
 .book-card .book-img {
     width: 100%;
     height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    object-fit: cover;
     transition: transform 1s;
 }
 
