--- a/src/App.css
+++ b/src/App.css
@@ -8,19 +8,13 @@ body {
 }
 
 html {
-    font-size: 16px;
+    font-size: clamp(16px, 1vw + 2px, 54px);
 }
 
 body {
     font-family: Merienda, 'Courier New', Courier, monospace;
-    letter-spacing: 1px;
-
+    letter-spacing: 0.07rem;
     background-color: rgb(250, 240, 230);
-    /* background-image: url('../public/images/background.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed; */
 }
 
 body #root {
@@ -45,173 +39,64 @@ main {
 
 .fancy-background {
     background: linear-gradient(to right, rgba(245, 222, 170, 0.7) 0%, rgba(245, 222, 200, 0.7) 100%);
-    box-shadow: 0 0 20px 10px rgba(245, 222, 170, 0.9);
-    border-radius: 10px;
+    box-shadow: 0 0 1.25rem 0.6rem rgba(245, 222, 170, 0.9);
+    border-radius: 0.6rem;
 }
 
 a {
     text-decoration: none;
     color: black;
     user-select: none;
-    transition: all 0.5s;
 }
 
 .a-like-btn {
-    border: 1px solid black;
+    border: 0.07rem solid black;
     padding: 0.3rem 1rem;
     border-radius: 0.5rem;
     text-align: center;
-    transition: none;
+    display: block;
 }
 
-.a-like-btn:hover {
-    background-color: rgba(128, 128, 128, 0.5);
-    transform: none;
-}
-
-.a-like-btn:active {
-    box-shadow: inset 0 0 5px 1px black;
-    transform: none;
-}
-
-a:hover,
-.btn-styled-1:hover {
-    transform: perspective(100px) translate3d(0, 0, 20px);
-}
-
-a:active,
-.btn-styled-1:active {
-    transform: perspective(100px) translate3d(0, 0, 0);
-}
-
-.btn-styled-2 {
-    padding: 0 1rem;
-    transition: none;
-}
-
-.btn-styled-2:enabled:hover {
-    background-color: rgba(128, 128, 128, 0.5);
-}
-
-.btn-styled-2:enabled:active {
-    box-shadow: inset 0 0 5px 1px black;
-}
-
-.btn-styled-3 {
-    color: red;
-    border: none;
-    background: none;
-    padding: 0;
-    min-height: 1rem;
-    border-radius: 0;
-    user-select: none;
-}
-
-.btn-styled-3:hover {
-    transform: perspective(100px) translate3d(0, 0, 30px);
+a:focus-visible {
+    outline: 0.14rem dashed black;
+    outline-offset: 0.1rem;
 }
 
 input,
-button,
 select {
     font-family: inherit;
     font-size: inherit;
-    min-height: 2rem;
-    border-radius: 1rem;
     text-align: center;
-}
-
-button {
-    cursor: pointer;
-    border: 2px solid black;
-    transition: all 0.5s;
-    line-height: 0;
-}
-
-button:disabled:hover {
-    cursor: not-allowed;
-    transform: none;
+    line-height: 1;
+    border: 0.07rem solid black;
+    border-radius: 1rem;
+    outline: none;
+    height: 2rem;
 }
 
 input {
-    border: 1px solid black;
-    outline: 1px solid rgba(0, 0, 0, 0);
-    transition: all 1s;
+    transition: transform 0.5s, box-shadow 0.5s;
 }
 
 input:focus {
-    outline: 1px solid rgba(0, 0, 0, 1);
-    transform: perspective(100px) translate3d(0, 5px, 20px);
+    transform: perspective(5rem) translate3d(0, 0.3rem, 1rem);
+    box-shadow: 0 0 0.5rem 0.3rem rgba(0, 0, 0, 0.5);
 }
 
 select {
     cursor: pointer;
-    border: 1px solid black;
+    transition: box-shadow 0.5s;
 }
 
 select:focus {
-    outline: 1px solid black;
+    box-shadow: 0 0 0.5rem 0.3rem rgba(0, 0, 0, 0.5);
 }
 
 .invalid-field {
-    border: 2px red solid;
+    border: 0.14rem red solid;
     color: red;
 }
 
 .invalid-text {
     color: red;
-}
-
-@media screen and (min-width: 1200px) {
-    html {
-        font-size: 18px;
-    }
-}
-
-@media screen and (min-width: 1600px) {
-    html {
-        font-size: 20px;
-    }
-}
-
-@media screen and (min-width: 2000px) {
-
-    html {
-        font-size: 28px;
-    }
-}
-
-@media screen and (min-width: 2500px) {
-
-    html {
-        font-size: 30px;
-    }
-}
-
-@media screen and (min-width: 3000px) {
-
-    html {
-        font-size: 38px;
-    }
-}
-
-@media screen and (min-width: 3500px) {
-
-    html {
-        font-size: 44px;
-    }
-}
-
-@media screen and (min-width: 4000px) {
-
-    html {
-        font-size: 48px;
-    }
-}
-
-@media screen and (min-width: 4500px) {
-
-    html {
-        font-size: 52px;
-    }
 }
