--- a/src/components/BookCard/BookCard.css
+++ b/src/components/BookCard/BookCard.css
@@ -1,20 +1,26 @@
 .book-card {
-    width: 19rem;
+    max-width: 19rem;
     padding: 1rem;
+    transition: box-shadow 0.5s, transform 0.5s;
+}
+
+.book-card:hover, .book-card:focus-within {
+    transform: translateY(-0.2rem);
+    box-shadow: 0 0 0.5rem 0.3rem rgba(0,0,0,0.5);
 }
 
 .book-card .img-container {
     width: 100%;
     height: 22rem;
     overflow: hidden;
-    border: 1px solid black;
+    border: 0.07rem solid black;
 }
 
 .book-card .book-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: transform 1s;
+    transition: transform 0.5s;
 }
 
 .book-card .book-img:hover {
@@ -32,26 +38,19 @@
 .book-card div.flex {
     justify-content: space-between;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 1.25rem;
 }
 
 @media screen and (max-width: 420px) {
 
     .book-card {
-        width: 300px;
-        padding: 16px;
+        width: 100%;
+        max-width: 300px;
     }
 
     .book-card .img-container {
-        height: 350px;
-    }
-
-}
-
-@media screen and (max-width: 320px) {
-
-    .book-card {
-        width: 100%;
+        max-height: 350px;
+        height: 100vw;
     }
 
 }
