--- a/src/components/BookSection/BookSection.css
+++ b/src/components/BookSection/BookSection.css
@@ -1,24 +1,21 @@
-.book-section {
-    width: 65%;
-}
-
 .book-section .img-container {
     margin: 1rem;
 }
 
 .book-section .book-image {
-    transition: all 1s ease-in-out;
+    transition: transform 1s ease-in-out;
     width: 16rem;
 }
 
 .book-section .book-image:hover {
-    transform: perspective(100px) translate3d(100px, -40px, 40px);
+    transform: perspective(6rem) translate3d(2.5rem, -2.5rem, 2.5rem);
 }
 
 .book-section .book-info {
     flex-grow: 1;
     padding: 1rem;
     margin: 1rem;
+    line-height: 1.5;
 }
 
 .book-section .book-info p {
@@ -28,26 +25,11 @@
 .book-section .book-description {
     padding: 1rem;
     margin: 1rem;
+    line-height: 1.5;
 }
 
 .book-section .book-span {
     font-weight: bold;
-}
-
-@media screen and (max-width: 1200px) {
-
-    .book-section {
-        width: 70%;
-    }
-
-}
-
-@media screen and (max-width: 1024px) {
-
-    .book-section {
-        width: 100%;
-    }
-
 }
 
 @media screen and (max-width: 800px) {
@@ -76,7 +58,7 @@
     }
 
     .book-section .book-image:hover {
-        transform: perspective(100px) translate3d(0, 0, 30px);
+        transform: perspective(100px) translate3d(0, 0, 25px);
     }
 
 }
@@ -88,7 +70,7 @@
     }
 
     .book-section .book-image:hover {
-        transform: perspective(100px) translate3d(0, 0, 10px);
+        transform: none;
     }
 
 }
