--- a/src/components/SearchSection/SearchSection.css
+++ b/src/components/SearchSection/SearchSection.css
@@ -1,46 +1,30 @@
 .search-section {
     width: 75%;
-    justify-content: left;
+    justify-content: flex-start;
     flex-wrap: wrap;
     gap: 1rem;
     padding: 1rem;
     margin: 3rem auto;
 }
 
-.search-section #search-lable {
-    display: block;
-    position: relative;
+.search-section .search-by-name {
     min-width: 14rem;
-    height: 2rem;
-}
-
-.search-section #search-lable::after {
-    content: '';
-    cursor: pointer;
+    text-align: left;
+    text-indent: 0.5rem;
     background-image: url('./../../assets/images/search.png');
     background-size: 1.2rem;
     background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-    right: 0.5rem;
-    width: 1.2rem;
-    height: 100%;
-    z-index: 1;
+    background-position: 95% 50%;
 }
 
-.search-section #search {
-    width: 100%;
-    height: 100%;
-}
-
-.search-section #search:focus {
+.search-section .search-by-name:focus {
     transform: none;
 }
 
-.search-section #search::-webkit-search-cancel-button {
+.search-section .search-by-name::-webkit-search-cancel-button {
     /* -webkit-appearance:none; */
     position: relative;
-    right: 30px;
+    right: 2rem;
 }
 
 @media screen and (max-width: 1024px) {
