--- a/src/routes/pages/NotFound/NotFound.css
+++ b/src/routes/pages/NotFound/NotFound.css
@@ -1,10 +1,10 @@
 .error-info-container {
-    font-size: 4rem;
+    font-size: clamp(1rem, 2vw + 1rem, 4rem);
     padding: 1rem;
+    text-align: center;
 }
 
 .error-info-container p {
-    text-align: center;
     margin: 1rem 0;
 }
 
@@ -15,40 +15,8 @@
 
 .error-info-container a {
     display: block;
-    width: 50%;
     margin: 1rem auto;
-    text-align: center;
-    font-size: 2rem;
+    font-size: clamp(0.8rem, 1.5vw + 0.5rem, 2rem);
     text-decoration: underline;
     color: purple;
-}
-
-@media screen and (max-width: 1024px) {
-    .error-info-container {
-        font-size: 3rem;
-    }
-
-    .error-info-container a {
-        font-size: 1.5rem;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .error-info-container {
-        font-size: 1.5rem;
-    }
-
-    .error-info-container a {
-        font-size: 1rem;
-    }
-}
-
-@media screen and (max-width: 420px) {
-    .error-info-container {
-        font-size: 1rem;
-    }
-
-    .error-info-container a {
-        font-size: 0.8rem;
-    }
 }
