--- a/src/routes/pages/SignIn/SignIn.css
+++ b/src/routes/pages/SignIn/SignIn.css
@@ -2,9 +2,10 @@
     width: 10rem;
     height: 10rem;
     display: block;
-    margin: 2rem auto;
-    border-radius: 100%;
-    transition: transform 1s;
+    margin: 2rem auto 3rem;
+    border-radius: 50%;
+    object-fit: cover;
+    transition: transform 0.5s ease-in-out;
 }
 
 .signin-container img:hover {
@@ -14,7 +15,7 @@
 .signin-container form {
     margin: 1rem auto;
     padding: 1rem;
-    width: 14rem;
+    max-width: 14rem;
     text-align: center;
 }
 
@@ -24,16 +25,30 @@
     margin-bottom: 1rem;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
 
     .signin-container img {
-        width: 200px;
-        height: 200px;
-        margin: 0 auto 50px;
+        width: 14rem;
+        height: 14rem;
+        margin: 0 auto 3rem;
     }
 
     .signin-container form {
-        width: 95%;
+        max-width: 16rem;
+    }
+
+    .signin-container input,
+    .signin-container button[type="submit"] {
+        min-height: 2rem; 
+    }
+
+}
+
+@media screen and (max-width: 320px) {
+
+    .signin-container img {
+        width: 12.5rem;
+        height: 12.5rem;
     }
 
     .signin-container input,
