--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,20 +1,23 @@
 .spiner-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.global {
     position: fixed;
     /* inset: 0; */
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(0.2rem);
     z-index: 9999;
 }
 
-.spiner-container h2 {
+.global h2 {
     font-family: initial;
     color: white;
 }
