--- a/src/components/AvatarUploader/AvatarUploader.css
+++ b/src/components/AvatarUploader/AvatarUploader.css
@@ -1,20 +1,21 @@
-.avatar-container {
+.avatar-img-container {
   cursor: pointer;
   position: relative;
   border-radius: 50%;
   overflow: hidden;
 }
 
-.avatar-container img {
+.avatar-img-container img {
   width: 100%;
   height: 100%;
   display: block;
   border-radius: 50%;
   object-fit: cover;
   text-align: center;
+  user-select: none;
 }
 
-.avatar-container .avatar-overlay {
+.avatar-img-container .avatar-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -28,8 +29,20 @@
   font-size: 1.5rem;
   opacity: 0;
   transition: opacity 0.3s;
+  user-select: none;
 }
 
-.avatar-container .avatar-overlay:hover {
+.avatar-img-container .avatar-overlay:hover {
   opacity: 1;
+}
+
+.avatar-img-container + p {
+  text-align: center;
+  margin: 0.5rem 0;
+  padding: 0.5rem 0;
+  font-size: 0.9rem;
+  color: #b71c1c;
+  background-color: rgba(128, 128, 128, 0.8);
+  border-radius: 1rem;
+  line-height: 1.5;
 }
