--- a/src/components/AvatarUploader/AvatarUploader.css
+++ b/src/components/AvatarUploader/AvatarUploader.css
@@ -32,6 +32,14 @@
   user-select: none;
 }
 
+.avatar-img-container .avatar-overlay button {
+  position: absolute;
+  top: 15%;
+  right: 15%;
+  font-size: 1.5rem;
+  opacity: 0.7;
+}
+
 .avatar-img-container .avatar-overlay:hover {
   opacity: 1;
 }
