--- a/src/components/AvatarUploader/AvatarUploader.css
+++ b/src/components/AvatarUploader/AvatarUploader.css
@@ -5,6 +5,11 @@
   overflow: hidden;
 }
 
+.avatar-img-container:focus-visible {
+  outline: 0.14rem dashed black;
+  outline-offset: 0.1rem;
+}
+
 .avatar-img-container img {
   width: 100%;
   height: 100%;
@@ -40,7 +45,17 @@
   opacity: 0.7;
 }
 
+.avatar-img-container .avatar-overlay button:focus-visible {
+  outline: 0.14rem dashed white;
+  outline-offset: 0.1rem;
+  border-radius: 50%;
+}
+
 .avatar-img-container .avatar-overlay:hover {
+  opacity: 1;
+}
+
+.avatar-img-container.focused .avatar-overlay {
   opacity: 1;
 }
 
