--- a/src/components/AvatarUploader/AvatarUploader.css
+++ b/src/components/AvatarUploader/AvatarUploader.css
@@ -10,6 +10,10 @@
   outline-offset: 0.1rem;
 }
 
+.avatar-img-container:focus-within .avatar-overlay {
+  opacity: 1;
+}
+
 .avatar-img-container img {
   width: 100%;
   height: 100%;
@@ -52,10 +56,6 @@
 }
 
 .avatar-img-container .avatar-overlay:hover {
-  opacity: 1;
-}
-
-.avatar-img-container.focused .avatar-overlay {
   opacity: 1;
 }
 
