--- a/src/components/AvatarUploader/AvatarUploader.css
+++ b/src/components/AvatarUploader/AvatarUploader.css
@@ -61,11 +61,11 @@
 
 .avatar-img-container + p {
   text-align: center;
-  margin: 0.5rem 0;
-  padding: 0.5rem 0;
+  margin: 1rem 0 0 0;
+  padding: 0.5rem;
   font-size: 0.9rem;
-  color: #b71c1c;
-  background-color: rgba(128, 128, 128, 0.8);
+  color: #fff;
+  background-color: rgba(180, 50, 40, 0.8);
   border-radius: 1rem;
   line-height: 1.5;
 }
