--- a/src/routes/pages/Profile/Profile.css
+++ b/src/routes/pages/Profile/Profile.css
@@ -1,15 +1,18 @@
-.profile-container .avatar {
-  margin: 1rem auto 3rem;
+.profile-container {
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 4rem;
 }
 
-.profile-container .forms-container {
-  align-items: flex-start;
+.profile-container .avatar {
+  align-self: center;
 }
 
 .profile-container form {
-  margin: 1rem auto;
+  max-width: 16rem;
+  min-width: 14rem;
   padding: 1rem;
-  max-width: 18rem;
   text-align: center;
 }
 
@@ -17,26 +20,35 @@
   margin-top: 0;
 }
 
-.profile-container form :last-child {
-  margin-bottom: 0;
-}
-
 .profile-container form input,
 .profile-container form select,
 .profile-container form button {
-  width: 100%;
   height: 2rem;
+}
+
+.profile-container form input,
+.profile-container form select {
+  width: 100%;
   margin-bottom: 1rem;
+}
+
+.profile-container form button {
+  min-width: 40%;
+  margin: 0 0.5rem;
 }
 
 .profile-container form hr {
   margin: 0 0 1rem 0;
 }
 
-.profile-container .alert {
-  max-width: 18rem;
+.profile-container form.error {
+  border: 2px solid rgba(180, 50, 40);
+}
+
+.profile-container form > .alert {
+  max-width: 16rem;
   text-align: center;
-  margin: 1rem auto 0;
+  margin: 0 auto 1rem;
   padding: 0.5rem;
   font-size: 0.9rem;
   border-radius: 1rem;
@@ -44,21 +56,25 @@
   color: #fff;
 }
 
-.profile-container .error {
+.profile-container form > .error {
   background-color: rgba(180, 50, 40, 0.8);
 }
 
-.profile-container .message {
+.profile-container form > .message {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
 @media screen and (max-width: 320px) {
   .profile-container form input,
+  .profile-container form select {
+    margin-bottom: 1.5rem;
+  }
+
+  .profile-container form input,
   .profile-container form select,
   .profile-container form button {
     height: 3rem;
     border-radius: 1.5rem;
-    margin-bottom: 1.5rem;
   }
 
   .profile-container form hr {
