--- a/src/routes/pages/Profile/Profile.css
+++ b/src/routes/pages/Profile/Profile.css
@@ -45,7 +45,7 @@
   border: 2px solid rgba(180, 50, 40);
 }
 
-.profile-container form > .alert {
+.profile-container form > .message {
   max-width: 16rem;
   text-align: center;
   margin: 0 auto 1rem;
@@ -56,12 +56,12 @@
   color: #fff;
 }
 
-.profile-container form > .error {
+.profile-container form > .message-error {
   background-color: rgba(180, 50, 40, 0.8);
 }
 
-.profile-container form > .message {
-  background-color: rgba(0, 0, 0, 0.8);
+.profile-container form > .message-success {
+  background-color: rgba(0, 160, 0, 0.8);
 }
 
 @media screen and (max-width: 320px) {
