--- a/src/routes/pages/Registration/Registration.css
+++ b/src/routes/pages/Registration/Registration.css
@@ -5,6 +5,10 @@
   text-align: center;
 }
 
+.register-container form :first-child {
+  margin-top: 0;
+}
+
 .register-container input,
 .register-container select,
 .register-container button[type="submit"] {
@@ -21,10 +25,14 @@
   margin-bottom: 0;
 }
 
-.register-container .alert {
+.register-container form.error {
+  border: 2px solid rgba(180, 50, 40);
+}
+
+.register-container form > .message {
   max-width: 18rem;
   text-align: center;
-  margin: 1rem auto 0;
+  margin: 0 auto 1rem;
   padding: 0.5rem;
   font-size: 0.9rem;
   border-radius: 1rem;
@@ -32,12 +40,12 @@
   color: #fff;
 }
 
-.register-container .error {
+.register-container form > .message-error {
   background-color: rgba(180, 50, 40, 0.8);
 }
 
-.register-container .message {
-  background-color: rgba(0, 0, 0, 0.8);
+.register-container form > .message-success {
+  background-color: rgba(0, 160, 0, 0.8);
 }
 
 @media screen and (max-width: 320px) {
