--- a/src/routes/pages/Login/Login.css
+++ b/src/routes/pages/Login/Login.css
@@ -5,27 +5,15 @@
   text-align: center;
 }
 
+.login-container form :first-child {
+  margin-top: 0;
+}
+
 .login-container input,
 .login-container button[type="submit"] {
   width: 100%;
   height: 2rem;
   margin-bottom: 1rem;
-}
-
-.login-container form.error {
-  border: 2px solid rgba(180, 50, 40);
-}
-
-.login-container .message-error {
-  max-width: 14rem;
-  text-align: center;
-  margin: 1rem auto 0;
-  padding: 0.5rem;
-  font-size: 0.9rem;
-  color: #fff;
-  background-color: rgba(180, 50, 40, 0.8);
-  border-radius: 1rem;
-  line-height: 1.5;
 }
 
 @media screen and (max-width: 320px) {
