--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -24,6 +24,10 @@
   font-size: 1.5rem;
 }
 
+.cart-item button:disabled:hover {
+  background: none;
+}
+
 @media screen and (max-width: 800px) {
   .cart-item {
     flex-direction: column;
