--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,12 +9,19 @@
 .header h1 {
     margin: 1rem 0;
     user-select: none;
+    flex-shrink: 0;
 }
 
 .header nav {
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     padding: 1rem;
     gap: 1.5rem;
+}
+
+.header nav a {
+    flex-shrink: 0;
 }
 
 .header .cart-link {
@@ -26,21 +33,23 @@
     position: absolute;
     bottom: 0;
     right: -0.5rem;
-    background-color: rgb(240, 240, 10);
+    background-color: rgb(240, 240, 10, 0.8);
     border: 0.07rem solid black;
     border-radius: 1rem;
     padding: 0.1rem;
 }
 
-.header .user {
-    align-items: center;
+.header .profile-link {
+    line-height: 3.2rem;
 }
 
 .header .user-name {
-    padding-left: 0.5rem;
+    float: right;
+    margin-left: 0.5rem;
 }
 
 .header .user-avatar {
+    float: left;
     width: 3.2rem;
     height: 3.2rem;
     border-radius: 50%;
@@ -50,18 +59,6 @@
 @media screen and (max-width: 800px) {
 
     .header {
-        flex-direction: column;
-    }
-
-}
-
-@media screen and (max-width: 420px) {
-
-    .header h1 {
-        text-align: center;
-    }
-
-    .header nav {
         flex-direction: column;
     }
 
