--- a/src/components/LazyImage/LazyImage.css
+++ b/src/components/LazyImage/LazyImage.css
@@ -7,6 +7,16 @@
     animation-fill-mode: forwards;
 }
 
+.on-error-fallback {
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to right, rgba(245, 222, 170, 0.7) 0%, rgba(245, 222, 200, 0.7) 100%);
+    user-select: none;
+}
+
 @keyframes show {
     to {
         opacity: 1;
